# check

./: .editorconfig  .env  .envrc  .gitignore  .gitmodules  CNAME  Justfile  README.md  Ravelin_Fraud_and_Payments_Survey_2024.pdf.url  lib.just  sonar-project.properties
.flake/: flake.nix
.githooks/: commit-msg
.github/workflows/: astro.yml  build.yml
app/verification-service/: .gitignore
docs/: Justfile  README.md  astro.config.mjs  flake.nix  package-lock.json  package.json
docs/src/assets/: Justfile  c4_container.drawio  c4_context.drawio
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: id.md  share.md  trustmark.md  verification.md
docs/src/content/docs/reference/: architecture.md  self-hosting.md
k8s/demo-shop/: README.md  ingress.yaml
k8s/embedded-verification-ui/: README.md  ingress.yaml  kustomization.yaml
k8s/verifiable-data-service/: README.md  deployment.yaml
k8s/verification-service/: README.md  ingress.yaml
k8s/verification-service-ui/: README.md  ingress.yaml  service.yaml
services/demo-shop/: .env  .env.tunnel  .envrc  .gitignore  Justfile  LICENSE  README.md  app.config.ts  caddy.json  default.nix  deno.jsonc  flake.nix  manifest.json  package.json  tsconfig.json
services/demo-shop/k8s/: README.md  deployment.yaml  service.yaml
services/demo-shop/public/: config.json
services/demo-shop/src/: app.tsx  entry-server.tsx
services/demo-shop/src/components/: ConfigContext.tsx  Nav.tsx  QRCode.tsx
services/demo-shop/src/components/icons/: Shield.tsx
services/demo-shop/src/components/verification/: Frame.tsx  Pre.tsx  Start.tsx  Thanks.tsx  Verify.tsx
services/demo-shop/src/lib/: isMobile.js  logging.js.old  store.js  store_redis.js
services/demo-shop/src/routes/: [...404].tsx  checkout.tsx  close.tsx  credentials.tsx  index.tsx
services/demo-shop/src/routes/_status/: healthz.tsx
services/demo-shop/src/routes/api/: config.tsx
services/demo-shop/src/routes/callback/: :id.jsx  :id.tsx
services/demo-shop/src/routes/checkout/: :id.tsx
services/embedded-verification-ui/: .env  .env.tunnel  .envrc  .gitignore  Justfile  README.md  caddy.json  default.nix  deno.jsonc  flake.nix  index.html  manifest.json  package.json  tsconfig.json  vite.config.ts
services/embedded-verification-ui/config/: config.json
services/embedded-verification-ui/k8s/: README.md  deployment.yaml  service.yaml
services/embedded-verification-ui/src/: App.module.css  App.tsx  VerificationDetails.tsx  VerificationStatus.tsx  index.tsx
services/embedded-verification-ui/src/components/: Button.tsx  Card.tsx  ConfigContext.tsx  Context.tsx  Modal.tsx  VerificationContext.tsx
services/embedded-verification-ui/src/components/icons/: Check.tsx  CheckHtml.tsx  Shield.tsx
services/embedded-verification-ui/src/components/views/: Details.tsx  Minimized.tsx  Standard.tsx
services/embedded-verification-ui/src/lib/: isMobile.js  vc2data.js
services/embedded-verification-ui/src/views/: Details.tsx  Minimized.tsx  Standard.tsx
services/shopify/: flake.nix
services/shopify/evi/: README.md  package-lock.json  package.json  shopify.app.toml
services/verifiable-data-service/: .editorconfig  .env  .env.tunnel  .gitignore  Cargo.toml  Justfile  README.md  caddy.json  default.nix  flake.nix  manifest.json  openapi.yaml  rustfmt.toml
services/verifiable-data-service/k8s/: README.md  deployment.yaml  ingress.yaml  service.yaml
services/verifiable-data-service/src/: config.rs  key.jwk  main.rs  validate.rs
services/verification-service/: .env  .env.tunnel  .gitignore  Cargo.toml  Justfile  README.md  caddy.json  default.nix  flake.nix  manifest.json  openapi.yaml
services/verification-service-ui/: .editorconfig  .env  .env.tunnel  .envrc  .gitignore  Justfile  README.md  app.config.ts  caddy.json  cliff.toml  default.nix  flake.nix  index.html  manifest.json  package.json  tsconfig.app.json  tsconfig.json  unocss.config.ts  vite.config.ts  vitest.config.ts
services/verification-service-ui/k8s/: deployment.yaml
services/verification-service-ui/src/: App.tsx  app.tsx  entry-server.tsx  index.tsx
services/verification-service-ui/src/components/: ConfirmButton.test.tsx  ConfirmButton.tsx  CredentialCard.tsx  ErrorCard.tsx  Footer.tsx  Nav.tsx  VerificationResult.tsx  VerificationResultDetailDummies.tsx  VerificationSearch.tsx
services/verification-service-ui/src/routes/: about.tsx  index.tsx
services/verification-service/k8s/: deployment.yaml  service.yaml
services/verification-service/lib/: Cargo.toml
services/verification-service/lib/src/: dto.rs  lib.rs
services/verification-service/src/: bin.rs  dto.rs  lib.rs  main.rs  verify.rs
services/verification-service/src/verifications/: controller.rs  dto.rs  mod.rs  service.rs  verification_service.rs
services/verification-service/tests/: README.md  gen.sh
services/verification-service/tests/credentials/: credential-self-issued-domain-linkage-bad-subject-id.json  credential-self-issued-domain-linkage-fake-origin.json  credential-self-issued-domain-linkage-subject-is-not-issuer.json  credential-self-issued-domain-linkage.json  credential-self-issued-no-id.json  credential-self-issued-tampered.json  credential-self-issued.json  credential-trust-party-issued-expired.json  credential-trust-party-issued-for-someone-else.json  credential-trust-party-issued-no-expiration-date.json  credential-trust-party-issued-not-expired.json
services/verification-service/tests/did-configurations/: did-config-holder-bad-subject-id.json  did-config-holder-fake-origin.json  did-config-holder-subject-is-not-issuer.json  did-config-holder.json
services/verification-service/tests/dids/: did-doc-holder.json  did-doc-trust-party.json  did-holder  did-trust-party
services/verification-service/tests/keys/: key-holder.jwk  key-trust-party.jwk
services/verification-service/tests/presentations/: presentation-multiple-vc-expired.json  presentation-multiple-vc.json  presentation-single-vc.json  presentation-tampered-holder.json  presentation-tampered-vc.json
(+11 files in other folders)
