# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["identinet GmbH"]
categories = ["web-programming::http-server"]
description = "CHECK Verifiable Data Service"
edition = "2021"
keywords = ["ssi", "http"]
name = "verifiable-data-service"
repository = "https://github.com/identinet/check"
version = "0.0.1"

[features]
fail-on-warnings = []

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"

[dev-dependencies]
hyper-util = { version = "0.1", features = [
  "client",
  "http1",
  "client-legacy",
] }
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.0"
