# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["identinet GmbH"]
categories = ["web-programming::http-server"]
description = "API for Check verification service"
edition = "2021"
keywords = ["ssi", "http"]
name = "verification-service"
repository = "https://github.com/identinet/check"
version = "0.0.1"

[features]
fail-on-warnings = []
