# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["identinet GmbH"]
categories = ["web-programming::http-server"]
description = "API for Check Verification Service"
edition = "2021"
keywords = ["ssi", "http"]
name = "verification-service"
repository = "https://github.com/identinet/check"
version = "0.0.1"

[features]
fail-on-warnings = []

[dependencies]
axum = "^0.8.1"
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1.43.0", features = ["full"] }
tower = "^0.5.2"
url = "^2.5.4"

[dev-dependencies]
tower = { version = "^0.5.2", features = ["util"] }
http-body-util = "^0.1.0"
serde_json = "^1.0"
axum = { version = "^0.8.1", features = ["__private"] }
