# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["identinet GmbH"]
categories = ["web-programming::http-server"]
description = "API for Check Verification Service"
edition = "2021"
keywords = ["ssi", "http"]
name = "verification-service"
repository = "https://github.com/identinet/check"
version = "0.0.1"

[features]
fail-on-warnings = []

[dependencies]
axum = "^0.8.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
ssi = "0.10.2"
thiserror = "2.0.12"
tokio = { version = "^1.43.0", features = ["full"] }
tower = "^0.5.2"
url = "^2.5.4"

[dev-dependencies]
tower = { version = "^0.5.2", features = ["util"] }
http-body-util = "^0.1.0"
serde_json = "^1.0"
axum = { version = "^0.8.1", features = ["__private"] }

[patch.crates-io]
# there's a breaking change coming in ssi lib with commit "ef39aead TH ◯ Improve `ssi-crypto`. (#642"
ssi = { git = "https://github.com/identinet/ssi.git", rev = "4b79532a" }
# branch = "main"
