# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["identinet GmbH"]
categories = ["web-programming::http-server"]
description = "Check Verification Service library"
edition = "2021"
keywords = ["ssi", "http"]
name = "lib"
repository = "https://github.com/identinet/check"
version = "0.0.1"

[features]
fail-on-warnings = []

[dependencies]
axum = "^0.8.4"
cfg-if = "1.0.1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0"
ssi = "0.12.0"
tokio = { version = "^1.47.0", features = ["full"] }
url = "2"

[dev-dependencies]

# [patch.crates-io]
# ssi = { git = "https://github.com/identinet/ssi.git", branch = "main" }
